test: use playwright junit stack for product plan